--- a/shared/tikz/rnns/gru.tex
+++ b/shared/tikz/rnns/gru.tex
@@ -2,7 +2,7 @@
 
 \usepackage{formation}
 \usepackage{tikz}
-\usetikzlibrary{positioning, fit, arrows.meta, shapes}
+\usetikzlibrary{positioning, fit, arrows.meta, shapes, decorations.pathreplacing,decorations.markings}
 
 % used to avoid putting the same thing several times...
 % Command \empt{var1}{var2}
@@ -20,17 +20,22 @@
         rounded corners=5mm, 
         draw,
         very thick,
+        fill=cyan
         },
     operator/.style={%For operators like +  and  x
         circle,
         draw,
         inner sep=-0.5pt,
-        minimum height =.2cm,
+        minimum height =.5cm,
+        fill=green
         },
     function/.style={%For functions
         ellipse,
         draw,
-        inner sep=1pt
+        inner sep=1pt,
+        minimum width=0.8cm,
+        minimum height=0.5cm,
+        fill=orange,
         },
     ct/.style={% For external inputs and outputs
         circle,
@@ -44,7 +49,7 @@
         draw,
         minimum width=4mm,
         minimum height=3mm,
-        inner sep=1pt
+        inner sep=1pt,
         },
     mylabel/.style={% something new that I have learned
         font=\scriptsize\sffamily
@@ -64,54 +69,43 @@
     \node [cell, minimum height =4cm, minimum width=6cm] at (0,0){} ;
 
     % Draw inputs named ibox#
-    \node [gt] (ibox1) at (-2,-0.75) {$\sigma$};
-    \node [gt] (ibox2) at (-1.5,-0.75) {$\sigma$};
-    \node [gt, minimum width=1cm] (ibox3) at (-0.5,-0.75) {Tanh};
-    \node [gt] (ibox4) at (0.5,-0.75) {$\sigma$};
+    \node [function] (ibox1) at (-0.5,-0.75) {$\sigma$};
+    \node [function] (ibox2) at (0.6,-0.75) {$\sigma$};
+    \node [function] (ibox3) at (2.1,-1) {Tanh};
 
    % Draw opérators   named mux# , add# and func#
-    \node [operator] (mux1) at (-2,1.5) {$\times$};
-    \node [operator] (add1) at (-0.5,1.5) {+};
-    \node [operator] (mux2) at (-0.5,0) {$\times$};
-    \node [operator] (mux3) at (1.5,0) {$\times$};
-    \node [function] (func1) at (1.5,0.75) {Tanh};
+    \node [operator] (mux1) at (0.6,1.5) {$\times$};
+    \node [operator] (add1) at (2.1,1.5) {$+$};
+    \node [operator] (mux2) at (-1.5,0.25) {$\times$};
+    \node [operator] (minus1) at (1.2,0.25) {$1-$};
+    \node [operator] (mux3) at (2.1,0.25) {$\times$};
 
-    % Draw External inputs? named as basis c,h,x
-    \node[ct, label={[mylabel]Cell}] (c) at (-4,1.5) {\empt{c}{t-1}};
-    \node[ct, label={[mylabel]Hidden}] (h) at (-4,-1.5) {\empt{h}{t-1}};
-    \node[ct, label={[mylabel]left:Input}] (x) at (-2.5,-3) {\empt{x}{t}};
+    % Draw inputs, hidden, output (x,h,o)
+    \node[input] (x) at (-2.5,-3) {$\vec{x}_{t  }$};
+    \node[hencoder] (h) at (-4,1.5)     {$\vec{h}_{t-1}$};
+    \node[hencoder] (h2) at (4,1.5)     {$\vec{h}_{t}$};
+    \node[output] (x2) at (2.6,3) {$\vec{y}_{t}$};
 
-    % Draw External outputs? named as basis c2,h2,x2
-    \node[ct, label={[mylabel]Label1}] (c2) at (4,1.5) {\empt{c}{t}};
-    \node[ct, label={[mylabel]Label2}] (h2) at (4,-1.5) {\empt{h}{t}};
-    \node[ct, label={[mylabel]left:Label3}] (x2) at (2.5,3) {\empt{h}{t}};
+    %Invisible node
+    \node (i1) at (-1.5, -1.5) {};
 
 % Start connecting all.
     %Intersections and displacements are used. 
     % Drawing arrows    
-    \draw [ArrowC1] (c) -- (mux1) -- (add1) -- (c2);
+    \draw [->, ArrowC1] (h) -- (mux1) -- (add1) -- (h2);
+    \draw [->, ArrowC1] (h) -- (-2,1.5) |- (i1) -| (ibox1);
+    \draw [->, ArrowC1] (h) -- (-2,1.5) |- (i1) -| (ibox2);
+    \draw [->, ArrowC1] (h) -- (-2,1.5) -| (mux2);
+    \draw [->, ArrowC1] (x) |- (i1) -| (ibox1);
+    \draw [->, ArrowC1] (x) |- (i1) -| (ibox2);
+    \draw [->, ArrowC1] (x) |- (0,-1.8) -| (ibox3);
+    \draw [->, ArrowC1] (mux2) |- (0,-1.8) -| (ibox3);
+    \draw [->, ArrowC2] (ibox1) |- node[right, pos=0.8] {$\;\;R_t$} (mux2);
+    \draw [->, ArrowC1] (ibox2) -- node[left, pos=0.43] {$Z_t$} (mux1);
+    \draw [->, ArrowC1] (ibox2) |- (minus1) -- (mux3);
+    \draw [->, ArrowC1] (ibox3) -- (mux3) -- (add1);
+    \draw [->, ArrowC1] (add1) -| (x2);
 
-    % Inputs
-    \draw [ArrowC2] (h) -| (ibox4);
-    \draw [ArrowC1] (h -| ibox1)++(-0.5,0) -| (ibox1); 
-    \draw [ArrowC1] (h -| ibox2)++(-0.5,0) -| (ibox2);
-    \draw [ArrowC1] (h -| ibox3)++(-0.5,0) -| (ibox3);
-    \draw [ArrowC1] (x) -- (x |- h)-| (ibox3);
-
-    % Internal
-    \draw [->, ArrowC2] (ibox1) -- (mux1);
-    \draw [->, ArrowC2] (ibox2) |- (mux2);
-    \draw [->, ArrowC2] (ibox3) -- (mux2);
-    \draw [->, ArrowC2] (ibox4) |- (mux3);
-    \draw [->, ArrowC2] (mux2) -- (add1);
-    \draw [->, ArrowC1] (add1 -| func1)++(-0.5,0) -| (func1);
-    \draw [->, ArrowC2] (func1) -- (mux3);
-
-    %Outputs
-    \draw [-, ArrowC2] (mux3) |- (h2);
-    \draw (c2 -| x2) ++(0,-0.1) coordinate (i1);
-    \draw [-, ArrowC2] (h2 -| x2)++(-0.5,0) -| (i1);
-    \draw [-, ArrowC2] (i1)++(0,0.2) -- (x2);
 
 \end{tikzpicture}
 \end{document}
