fête du slip chez les standalone : ajout de layers de convolution dans formation.sty -> deckz clean run freeze au niveau des standalones.

--- a/shared/latex/nn/rnn/rnn.tex
+++ b/shared/latex/nn/rnn/rnn.tex
@@ -26,16 +26,16 @@
 
   \begin{figure}
     \centering
-    \V{["rnns/lastoutput", "th", 0.7] | image}
+    \V{["neural-networks/rnn/lastoutput", "th", 0.7] | image}
   \end{figure}
 \end{frame}
 
 \begin{frame}{Prédiction d'autants de sorties qu'il y a d'entrées}
-  \V{["rnns/alloutputs", "tw", 0.5] | image}
+  \V{["neural-networks/rnn/alloutputs", "tw", 0.5] | image}
 \end{frame}
 
 \begin{frame}{Prédiction d'un nombre arbitraire de sorties}
-  \V{["rnns/seq2seq", "tw", 1] | image}
+  \V{["neural-networks/rnn/seq2seq", "tw", 1] | image}
 \end{frame}
 
 \begin{frame}{Problème du gradient qui disparaît (vanishing gradient)}
