--- a/stys/Ball.sty
+++ b/stys/Ball.sty
@@ -1,4 +1,7 @@
+\NeedsTeXFormat{LaTeX2e}
+
 \ProvidesPackage{Ball}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %This Block can draw small Ball
 %Elementwise or reduction operations can be drawn with this
