--- a/shared/tikz/neural-networks/cnn/deep-auto-encoder.tex
+++ b/shared/tikz/neural-networks/cnn/deep-auto-encoder.tex
@@ -8,11 +8,14 @@
 \usepackage{Box}
 \usepackage{RightBandedBox}
 
-\def\ConvColor{rgb:yellow,5;red,2.5;white,5}
-\def\ConvReluColor{rgb:yellow,5;red,5;white,5}
+\def\ConvColor{rgb:blue,5;green,2.5;white,5}
+\def\ConvReluColor{rgb:blue,5;green,5;white,5}
 \def\PoolColor{rgb:red,1;black,0.3}
 \def\DcnvColor{rgb:blue,5;green,2.5;white,5}
+\def\UnpoolColor{rgb:yellow,5;red,2.5;white,5}
 \def\SoftmaxColor{rgb:magenta,5;black,7}
+
+\usetikzlibrary{3d} %for including external image 
 
 \begin{document}
 
@@ -21,86 +24,61 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% Draw Layer Blocks
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% conv1_1,conv1_2
-\pic[shift={(0,0,0)}] at (0,0,0) {RightBandedBox={name=cr1,caption=conv1,%
-        xlabel={{"64","64"}},zlabel=I,fill=\ConvColor,bandfill=\ConvReluColor,%
-        height=40,width={2,2},depth=40}};
-%pool1
-\pic[shift={(0,0,0)}] at (cr1-east) {Box={name=p1,%
-        fill=\PoolColor,opacity=0.5,height=35,width=1,depth=35}};
-%%%%%%%%%%
-% conv2_1,conv2_2
-\pic[shift={(2,0,0)}] at (p1-east) {RightBandedBox={name=cr2,caption=conv2,%
-        xlabel={{"64","64"}},zlabel=I/2,fill=\ConvColor,bandfill=\ConvReluColor,%
-        height=35,width={3,3},depth=35}};
-%pool2
-\pic[shift={(0,0,0)}] at (cr2-east) {Box={name=p2,%
-        fill=\PoolColor,opacity=0.5,height=30,width=1,depth=30}};
-%%%%%%%%%%
-% conv3_1,conv3_2
-\pic[shift={(2,0,0)}] at (p2-east) {RightBandedBox={name=cr3,caption=conv3,%
-        xlabel={{"256","256","256"}},zlabel=I/4,fill=\ConvColor,bandfill=\ConvReluColor,%
-        height=30,width={4,4,4},depth=30}};
-%pool3
-\pic[shift={(0,0,0)}] at (cr3-east) {Box={name=p3,%
-        fill=\PoolColor,opacity=0.5,height=23,width=1,depth=23}};
-%%%%%%%%%%
-% conv4_1,conv4_2,conv4_3
-\pic[shift={(1.8,0,0)}] at (p3-east) {RightBandedBox={name=cr4,caption=conv4,%
-        xlabel={{"512","512","512"}},zlabel=I/8,fill=\ConvColor,bandfill=\ConvReluColor,%
-        height=23,width={7,7,7},depth=23}};
-%pool4
-\pic[shift={(0,0,0)}] at (cr4-east) {Box={name=p4,%
-        fill=\PoolColor,opacity=0.5,height=15,width=1,depth=15}};
-%%%%%%%%%%
-% conv5_1,conv5_2,conv5_3
-\pic[shift={(1.5,0,0)}] at (p4-east) {RightBandedBox={name=cr5,caption=conv5,%
-        xlabel={{"512","512","512"}},zlabel=I/16,fill=\ConvColor,bandfill=\ConvReluColor,%
-        height=15,width={7,7,7},depth=15}};
-%pool5
-\pic[shift={(0,0,0)}] at (cr5-east) {Box={name=p5,%
-        fill=\PoolColor,opacity=0.5,height=10,width=1,depth=10}};
-%%%%%%%%%%     
-%% fc6, fc7 -> cr6, cr7
-\pic[shift={(1,0,0)}] at (p5-east) {RightBandedBox={name=cr6_7,caption=fc to conv,%
-        xlabel={{"4096","4096"}},fill=\ConvColor,bandfill=\ConvReluColor,%
-        height=10,width={10,10},depth=10}};
 %%%%%%%%%%   
-%% fc8 -> cr8    
+\node[canvas is zy plane at x=0] (alan) at (0,0,0) {\includegraphics[width=9cm,height=9cm]{/home/fmg/FORMATIONS/slides/shared/img/alan-turing.jpg}};
 
-\pic[shift={(1,0,0)}] at (cr6_7-east) {Box={name=c8,caption=fc8 to conv,%
-        xlabel={{"K","dummy"}},fill=\ConvColor,%
-        height=10,width=2,depth=10,zlabel=I/32}};
-%%%%%%%%%%   
-%% Dcnv32    
-\pic[shift={(2.5,0,0)}] at (c8-east) {Box={name=d32,caption=Deconv,%
-        xlabel={{"K","dummy"}},fill=\DcnvColor,%
-        height=40,width=2,depth=40}}; 
-%%%%%%%%%%   
-%% softmax    
-\pic[shift={(1,0,0)}] at (d32-east) {Box={name=softmax,caption=softmax,%
-        xlabel={{"K","dummy"}},fill=\SoftmaxColor,%
-        height=40,width=2,depth=40,zlabel=I}};  
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%% Draw connections
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\draw [connection]  (p1-east)    -- node {\midarrow} (cr2-west);
-\draw [connection]  (p2-east)    -- node {\midarrow} (cr3-west);
-\draw [connection]  (p3-east)    -- node {\midarrow} (cr4-west);
-\draw [connection]  (p4-east)    -- node {\midarrow} (cr5-west);
-\draw [connection]  (p5-east)    -- node {\midarrow} (cr6_7-west);
-\draw [connection]  (cr6_7-east) -- node {\midarrow} (c8-west);
-\draw [connection]  (c8-east)    -- node {\midarrow} (d32-west);
-\draw [connection]  (d32-east)   -- node {\midarrow} (softmax-west);
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%% Draw Dotted Edges 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\draw[densely dashed]
-(c8-nearnortheast) -- (d32-nearnorthwest)
-(c8-nearsoutheast) -- (d32-nearsouthwest)
-(c8-farsoutheast)  -- (d32-farsouthwest)
-(c8-farnortheast)  -- (d32-farnorthwest)
-;
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+% CONVOLUTION
+\pic[shift={(4,0,0)}] at (alan) {RightBandedBox={name=c1,caption=CONVOLUTION,
+        fill=\ConvColor,bandfill=\ConvReluColor,
+        height=40,width={2,2,2,2,2},depth=40}};
+% POOLING
+\pic[shift={(3,0,0)}] at (c1-east) {RightBandedBox={name=p1,caption=POOLING,
+        fill=\PoolColor, height=20,width={2,2,2,2,2},depth=20}};
+
+% CONVOLUTION
+\pic[shift={(3,0,0)}] at (p1-east) {RightBandedBox={name=c2,caption=CONVOLUTION,
+        fill=\ConvColor,bandfill=\ConvReluColor,
+        height=20,width={2,2,2,2,2},depth=20}};
+% POOLING
+\pic[shift={(3,0,0)}] at (c2-east) {RightBandedBox={name=p2,caption=POOLING,
+        fill=\PoolColor, height=10,width={2,2,2,2,2},depth=10}};
+
+% CONVOLUTION
+\pic[shift={(3,0,0)}] at (p2-east) {RightBandedBox={name=c3,caption=CONVOLUTION,
+        fill=\ConvColor,bandfill=\ConvReluColor,
+        height=10,width={2,2,2,2,2},depth=10}};
+
+% unPOOLING
+\pic[shift={(3,0,0)}] at (c3-east) {RightBandedBox={name=up1,caption=UPSAMPLING,
+        fill=\UnpoolColor, height=20,width={2,2,2,2,2},depth=20}};
+
+% CONVOLUTION
+\pic[shift={(3,0,0)}] at (up1-east) {RightBandedBox={name=c4,caption=CONVOLUTION,
+        fill=\ConvColor,bandfill=\ConvReluColor,
+        height=20,width={2,2,2,2,2},depth=20}};
+        
+% unPOOLING
+\pic[shift={(3,0,0)}] at (c4-east) {RightBandedBox={name=up2,caption=UPSAMPLING,
+        fill=\UnpoolColor, height=40,width={2,2,2,2,2},depth=40}};
+
+% CONVOLUTION
+\pic[shift={(3,0,0)}] at (up2-east) {RightBandedBox={name=c5,caption=CONVOLUTION,
+        fill=\ConvColor,bandfill=\ConvReluColor,
+        height=40,width={2,2,2,2,2},depth=40}};
+
+\node[canvas is zy plane at x=4] (alan2) at (c5-east) {\includegraphics[width=9cm,height=9cm]{/home/fmg/FORMATIONS/slides/shared/img/alan-turing.jpg}};
+
+
+%Connections
+\draw [connection]  (c1-east)   -- node {\midarrow} (p1-west);
+\draw [connection]  (p1-east)   -- node {\midarrow} (c2-west);
+\draw [connection]  (p2-east)   -- node {\midarrow} (c3-west);
+\draw [connection]  (c2-east)   -- node {\midarrow} (p2-west);
+\draw [connection]  (c3-east)   -- node {\midarrow} (up1-west);
+\draw [connection]  (c4-east)   -- node {\midarrow} (up2-west);
+\draw [connection]  (up1-east)   -- node {\midarrow} (c4-west);
+\draw [connection]  (up2-east)   -- node {\midarrow} (c5-west);
+
 \end{tikzpicture}
 \end{document}\grid
