--- a/shared/tikz/neural-networks/cnn/deep-auto-encoder.tex
+++ b/shared/tikz/neural-networks/cnn/deep-auto-encoder.tex
@@ -25,7 +25,7 @@
 %% Draw Layer Blocks
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%   
-\node[canvas is zy plane at x=0] (alan) at (0,0,0) {\includegraphics[width=9cm,height=9cm]{/home/fmg/FORMATIONS/slides/shared/img/alan-turing.jpg}};
+\node[canvas is zy plane at x=0] (alan) at (0,0,0) {\includegraphics[width=9cm,height=9cm]{img/alan-turing.jpg}};
 
 
 % CONVOLUTION
@@ -67,7 +67,7 @@
         fill=\ConvColor,bandfill=\ConvReluColor,
         height=40,width={2,2,2,2,2},depth=40}};
 
-\node[canvas is zy plane at x=4] (alan2) at (c5-east) {\includegraphics[width=9cm,height=9cm]{/home/fmg/FORMATIONS/slides/shared/img/alan-turing.jpg}};
+\node[canvas is zy plane at x=4] (alan2) at (c5-east) {\includegraphics[width=9cm,height=9cm]{img/alan-turing.jpg}};
 
 
 %Connections
