Translate basic nn section
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/en/nn/demo.tex
+++ b/shared/latex/en/nn/demo.tex
@@ -1,4 +1,4 @@
-\begin{frame}{Démonstration}
+\begin{frame}{Demonstration}
   \centering
-  \bluelink{https://playground.tensorflow.org/}{Réseau de neurones}
+  \bluelink{https://playground.tensorflow.org/}{Neural network}
 \end{frame}
