--- a/shared/latex/en/nn/regularization.tex
+++ b/shared/latex/en/nn/regularization.tex
@@ -1,34 +1,33 @@
-\begin{frame}
-  \frametitle{Sur-apprentissage (et sous-apprentissage)}
-  \V{["overfitting-train-nzmog", "tw", 0.8] | image}
+\begin{frame}{Overfit (and underfit)}
+  \V{["overfitting-train-nzmog", "tw", 0.8, "en"] | image}
 \end{frame}
 
-\begin{frame}{Par la pénalisation de l'utilisation des paramètres}
-  Coût supplémentaire pour l'utilisation des paramètres dans la fonction de perte~:
+\begin{frame}{Weight penalty}
+  Penalize neurons with big weights with a term in the loss function:
 
   \[
-  \text{perte} = \text{perte} + \lambda\sum||w||^2
+  \text{Loss} = \text{Loss} + \lambda\sum||w||^2
   \]
 
-  où $\lambda$ est un hyperparamètre
+  Where $\lambda$ is a hyperparameter.
 \end{frame}
 
-\begin{frame}{Par early stopping}
-  \V{["early-stopping-nzmog", "th", 0.7] | image}
+\begin{frame}{Early stopping}
+  \V{["early-stopping-nzmog-en", "th", 0.7] | image}
 \end{frame}
 
-\begin{frame}{Par augmentation/bruitage des données}
-  \V{["data-augmentation-nzmog", "tw", 1.0] | image}
+\begin{frame}{Data augmentation}
+  \V{["data-augmentation-nzmog-en", "tw", 1.0] | image}
 \end{frame}
 
-\begin{frame}{Par dropout}
+\begin{frame}{Dropout}
   \V{["dropout-2", "tw", 0.8] | image}
 \end{frame}
 
-\begin{frame}{En entraînant sur plusieurs tâches}
+\begin{frame}{Multi-task learning}
   \V{["multi-task-v2", "tw", 0.8] | image}
 \end{frame}
 
-\begin{frame}{En opposant des réseaux de neurones}
+\begin{frame}{Complex regularizations}
   \V{["gan-schema", "tw", 0.8] | image}
 \end{frame}
