--- a/shared/latex/en/nn/gradient-descent.tex
+++ b/shared/latex/en/nn/gradient-descent.tex
@@ -1,33 +1,34 @@
 
-\begin{frame}{Principe}
-  Calcul du gradient de l'erreur par rapport aux paramètres:
+\begin{frame}{Principle}
+  Compute the error gradient \emph{w.r.t.} the parameters:
+  %TODO: check wrt
   \[
   \frac{\partial{Err}}{\partial{w_i}}
   \]
-  Mise à jour :
+  Update:
   \[
   w_i' = w_i - \gamma * grad 
   \]
   où : $0 < \gamma < 1$ (learning rate)
-  \V{["gradient-nzmog", "tw", 0.25] | image}
+  \V{["gradient-nzmog", "tw", 0.25, "en"] | image}
 \end{frame}
 
-\begin{frame}{Algorithme}
+\begin{frame}{Algorithm}
   \begin{enumerate}[<+->]
-    \item Initialisation aléatoire du modèle
-    \item Tant qu'aucun critère d'arrêt n'est satisfait~:
+    \item Random initialization of the model
+    \item While no stopping criterion is satisfied:
       \begin{itemize}
-        \item Selection aléatoire d'un \textbf{batch} de données
-        \item \textbf{Forward} : Passe avant du \textbf{batch} dans le modèle
-        \item Calcul de l'erreur par rapport aux sorties attendues
-        \item \textbf{Backward} : Rétropropagation du gradient de l'erreur en fonction des paramètres dans le modèle (mise à jour du modèle)
-        \item Calcul des critères d'arrêt
+        \item Selection of a random \textbf{batch} of samples
+        \item \textbf{Forward}: Model output computation on the selected batch
+        \item Computation of the error (loss) compared to the expected output
+        \item \textbf{Backward}: Error gradient retropropagation (model update)
+        \item Stopping criteria computation
       \end{itemize}
   \end{enumerate}
 \end{frame}
 
 
-\begin{frame}{Exemple de dérivation --- Régression linéaire}
+\begin{frame}{Derivation example --- Linear regression}
   \begin{minipage}[l]{0.49\linewidth}
     \begin{align*}
       E_\Omega & = \frac{1}{2n} \sum_{i=1}^n( \hat{y_i} - y_i )^2 \\
@@ -47,18 +48,18 @@
     \end{center}
     \vfill
     \begin{center}
-      \textbf{Mise à jour}
+      \textbf{Update}
 
       $a \leftarrow a - \gamma\frac{\partial{E_{\Omega}}}{\partial{a}}$ \\
       $b \leftarrow b - \gamma\frac{\partial{E_{\Omega}}}{\partial{b}}$ \\
       $\;$ \\
-      où $0 < \gamma < 1$ (pas d'apprentissage)
+      where $0 < \gamma < 1$ (learning rate)
     \end{center}
   \end{minipage}\hfill
 \end{frame}
 
-\begin{frame}{Exemple}
-  Initialisation au hasard ($\gamma = 0.01$)
+\begin{frame}{Example}
+  Random initialization ($\gamma = 0.01$)
   \begin{itemize}
     \item a = 0.58 ($\hat{a} = 3.0$)
     \item b = 0.25 ($\hat{b} = 0.5$)
@@ -66,7 +67,7 @@
   \V{["regression-1", "th", 0.6] | image}
 \end{frame}
 
-\begin{frame}{Exemple}
+\begin{frame}{Example}
   \begin{itemize}
     \item a = 0.58 ($\hat{a} = 3.0$)
     \item b = 0.25 ($\hat{b} = 0.5$)
@@ -74,7 +75,7 @@
   \V{["regression-error", "th", 0.6] | image}
 \end{frame}
 
-\begin{frame}{Exemple}
+\begin{frame}{Example}
   \begin{itemize}
     \item a = 1.50 ($\hat{a} = 3.0$)
     \item b = 0.35 ($\hat{b} = 0.5$)
@@ -82,7 +83,7 @@
   \V{["regression-2", "th", 0.6] | image}
 \end{frame}
 
-\begin{frame}{Exemple}
+\begin{frame}{Example}
   \begin{itemize}
     \item a = 2.10 ($\hat{a} = 3.0$)
     \item b = 0.40 ($\hat{b} = 0.5$)
@@ -90,7 +91,7 @@
   \V{["regression-3", "th", 0.6] | image}
 \end{frame}
 
-\begin{frame}{Exemple}
+\begin{frame}{Example}
   \begin{itemize}
     \item a = 2.48 ($\hat{a} = 3.0$)
     \item b = 0.43 ($\hat{b} = 0.5$)
@@ -98,7 +99,7 @@
   \V{["regression-4", "th", 0.6] | image}
 \end{frame}
 
-\begin{frame}{Exemple}
+\begin{frame}{Example}
   \begin{itemize}
     \item a = 2.73 ($\hat{a} = 3.0$)
     \item b = 0.46 ($\hat{b} = 0.5$)
@@ -106,7 +107,7 @@
   \V{["regression-5", "th", 0.6] | image}
 \end{frame}
 
-\begin{frame}{Exemple}
+\begin{frame}{Example}
   \begin{itemize}
     \item a = 2.89 ($\hat{a} = 3.0$)
     \item b = 0.47 ($\hat{b} = 0.5$)
@@ -114,7 +115,7 @@
   \V{["regression-6", "th", 0.6] | image}
 \end{frame}
 
-\begin{frame}{Exemple}
+\begin{frame}{Example}
   \begin{itemize}
     \item a = 2.99 ($\hat{a} = 3.0$)
     \item b = 0.48 ($\hat{b} = 0.5$)
@@ -122,7 +123,7 @@
   \V{["regression-7", "th", 0.6] | image}
 \end{frame}
 
-\begin{frame}{Exemple}
+\begin{frame}{Example}
   \begin{itemize}
     \item a = 3.06 ($\hat{a} = 3.0$)
     \item b = 0.49 ($\hat{b} = 0.5$)
@@ -130,7 +131,7 @@
   \V{["regression-8", "th", 0.6] | image}
 \end{frame}
 
-\begin{frame}{Exemple}
+\begin{frame}{Example}
   \begin{itemize}
     \item a = 3.10 ($\hat{a} = 3.0$)
     \item b = 0.49 ($\hat{b} = 0.5$)
@@ -138,7 +139,7 @@
   \V{["regression-9", "th", 0.6] | image}
 \end{frame}
 
-\begin{frame}{Exemple}
+\begin{frame}{Example}
   \begin{itemize}
     \item a = 3.13 ($\hat{a} = 3.0$)
     \item b = 0.50 ($\hat{b} = 0.5$)
