--- a/shared/latex/en/nn/cnn/cnn-data.tex
+++ b/shared/latex/en/nn/cnn/cnn-data.tex
@@ -1,44 +1,43 @@
 \begin{frame}{MNIST}
-  810k caractères manuscrits
+  810k handwritten digits
   \V{["mnist", "th", 0.6] | image}
 \end{frame}
 
 \begin{frame}{Caltech 256}
-  300k objets/animaux/personnes
+  300k objects/animals/persons
   \V{["caltech256", "th", 0.6] | image}
 \end{frame}
 
 \begin{frame}{Street View House Numbers}
-  600k numéros annotés
+  600k annotated house numbers
   \V{["streetviewdataset", "th", 0.6] | image}
 \end{frame}
 
 \begin{frame}{ImageNet}
-  Images annotés par synset de wordnet :
+  Annotated images: 1000 classes
   \begin{itemize}
-    \item 20k synsets non-vides (objectif 100k)
-    \item 14M images (objectif 100M)
-    \item dont 1M sont annotées
+    \item 14M images (100M objective)
+    \item 1M annotated
   \end{itemize}
   \V{["imagenet", "th", 0.5] | image}
 \end{frame}
 
 \begin{frame}{MS-COCO}
-   330k images avec annotation+segmentation
+   330k annotated and segmented images
   \V{["ms-coco", "tw", 1] | image}
 \end{frame}
 
 \begin{frame}{VisualQA}
-  265k images, Question answering
+  265k images, question answering
   \V{["visual-qa", "th", 0.6] | image}
 \end{frame}
 
 \begin{frame}{Open Images}
-  9M images annotées avec 6000 catégories
+  9M annotated images: 6000 classes
   \V{["openimage", "th", 0.6] | image}
 \end{frame}
 
 \begin{frame}{MS-Celeb-1M}
-  10M photos de 100k célebrités
+  10M pictures of 100k celebrities
   \V{["ms-celeb", "th", 0.6] | image}
 \end{frame}
