--- a/shared/latex/en/nn/cnn/demo.tex
+++ b/shared/latex/en/nn/cnn/demo.tex
@@ -1,9 +1,9 @@
-\begin{frame}{Démonstration}
+\begin{frame}{Demonstration}
   \centering
   \begin{itemize}[<+->]
-    \item \bluelink{https://www.cs.ryerson.ca/~aharley/vis/conv/}{Réseau de convolutions}
+    \item \bluelink{https://www.cs.ryerson.ca/~aharley/vis/conv/}{Convolutional neural networks}
     \item \bluelink{https://reiinakano.com/arbitrary-image-stylization-tfjs/}{Styling}
-    \item \bluelink{https://github.com/jiny2001/dcscn-super-resolution}{Super-résolution}
-    \item \bluelink{https://richzhang.github.io/colorization/}{Colorisation}
+    \item \bluelink{https://github.com/jiny2001/dcscn-super-resolution}{Super-resolution}
+    \item \bluelink{https://richzhang.github.io/colorization/}{Colorization}
   \end{itemize}
 \end{frame}
