--- a/shared/latex/en/nn/rnn/demo.tex
+++ b/shared/latex/en/nn/rnn/demo.tex
@@ -1,8 +1,8 @@
-\begin{frame}{Démonstration}
+\begin{frame}{Demonstration}
   \centering
   \begin{itemize}
     \item \bluelink{https://projector.tensorflow.org/}{Embeddings}
-    \item \bluelink{https://karpathy.github.io/2015/05/21/rnn-effectiveness/}{Interprétation de réseaux récurrents}
+    \item \bluelink{https://karpathy.github.io/2015/05/21/rnn-effectiveness/}{Recurrent neural networks interpretation}
     \item \bluelink{https://play.aidungeon.io/main/about}{AI Dungeon}
     \item \bluelink{https://www.cleverbot.com/}{Clever Bot}
   \end{itemize}
