--- a/shared/latex/en/nn/gan/demo.tex
+++ b/shared/latex/en/nn/gan/demo.tex
@@ -1,4 +1,4 @@
-\begin{frame}{Démonstration}
+\begin{frame}{Demonstration}
   \centering
-  \bluelink{https://poloclub.github.io/ganlab/}{Visualisation GAN}
+  \bluelink{https://poloclub.github.io/ganlab/}{GAN visualization}
 \end{frame}
