--- a/shared/latex/en/nn/gan/intro.tex
+++ b/shared/latex/en/nn/gan/intro.tex
@@ -1,20 +1,20 @@
-\begin{frame}{Que voyez-vous ?}
+\begin{frame}{What do you see?}
   \V{["gan-zebra-horse", "tw", 1] | image}
 \end{frame}
 
-\begin{frame}{Que voyez-vous ?}
+\begin{frame}{What do you see?}
   \V{["gan-faux-visages", "th", 0.8] | image}
 \end{frame}
 
-\begin{frame}{Génération de visages}
+\begin{frame}{Face generation}
   \V{["gan-faux-visages", "th", 0.8] | image}
 \end{frame}
 
-\begin{frame}{Génération Zèbre $\iff$ Cheval}
+\begin{frame}{Generation Zebra $\iff$ Horse}
   \V{["cyclegan", "th", 0.7] | image}
 \end{frame}
 
-\begin{frame}{Schéma des Generative Adverserial Networks}
-  Le générateur n'a jamais vu les vraies données !
+\begin{frame}{Generative adverserial networks model}
+  The generator is not trained directly on true data!
   \V{["gan-schema", "tw", 1] | image}
 \end{frame}
